@@ -5,7 +5,8 @@ shareddir = $(datadir)/gupnp-tools
 endif
 
 AM_CFLAGS = $(LIBGUPNP_CFLAGS) $(LIBGUPNP_AV_CFLAGS) $(LIBGLADE_CFLAGS) \
-	    -I$(top_srcdir) -DDATA_DIR='"$(shareddir)"' -I../common
+	    -I$(top_srcdir) -DDATA_DIR='"$(shareddir)"' \
+	    -I$(top_srcdir)/src/common
 
 bin_PROGRAMS = gupnp-av-cp
 
